syntax = "proto3";

package theftdetection.v1;

import "google/protobuf/timestamp.proto";
import "common.proto";
import "alert.proto";

message Frame {
  bytes payload = 1;
  int64 session_id = 2;
  int32 frame_index = 3;
  google.protobuf.Timestamp timestamp = 4;
  string camera_id = 5;
}

enum InferenceState {
  INFERENCE_STATE_UNSPECIFIED = 0;
  INFERENCE_STATE_WARMING_UP = 1;
  INFERENCE_STATE_NORMAL = 2;
  INFERENCE_STATE_ANOMALY = 3;
}

message TrackedPerson {
  int32 track_id = 1;
  Bbox bbox = 2;
  repeated Keypoint keypoints = 3;
  float score = 4;
  InferenceState inference_state = 5;
}

message Detection {
  Bbox bbox = 1;
  repeated Keypoint keypoints = 2;
  float score = 3;
  InferenceState inference_state = 4;
  int32 track_id = 5;
  bool detection_present = 6;
  repeated TrackedPerson persons = 7;
  repeated TrackedObject objects = 8;
  int32 frame_width = 9;
  int32 frame_height = 10;
  repeated Concealment concealments = 11;
}

service InferenceService {
  rpc Analyze(Frame) returns (Detection);
}
